--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="bookmarks">Bookmarks</string>
     <string name="profile">Profile</string>
     <string name="search">Search</string>
+    <string name="t">T</string>
 </resources>
