Bookmarks fragment, adapter updated, refactor

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="tmp_article_text">Message from the developer. Unfortunately, this api does not allow viewing the full text of the article,so for the sake of beauty, I will temporarily add this text here and duplicate it several times. Maybe later I will make a custom parserfrom the link, but not now.\nMessage from the developer. Unfortunately, this api does not allow viewing the full text of the article, so for the sake of beauty, I will temporarily add this text here and duplicate it several times. Maybe later I will make a custom parser from the link, but not now.\nMessage from the developer. Unfortunately, this api does not allow viewing the full text of the article, so for the sake of beauty, I will temporarily add this text here and duplicate it several times. Maybe later I will make a custom parser from the link, but not now.</string>
     <string name="source">Source</string>
     <string name="share">Share</string>
+    <string name="bookmark_hint">Start saving interesting news</string>
+    <string name="section_is_empty">This section is empty</string>
 </resources>
